--- a/Portfolio-Website-style-sheet.css
+++ b/Portfolio-Website-style-sheet.css
@@ -603,8 +603,9 @@ a {
 }
 
 .formfield-textarea{
+    resize: none;
     width: 100%;
-    height: 7rem;;
+    height: 8rem;;
     font-size: 18px;
     border-radius: 5px;
     box-shadow: 2px 2px 10px #1f1f1f;
@@ -629,7 +630,7 @@ a {
     border: none;
     display: flex;
     justify-content: center;
-    gap: 1.7rem;
+    gap: 0.5rem;
     align-items: center;
     z-index: 1;
     transition: all 400ms ease-in;
